2004-11-19 Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * fixed bug: empty non-pos args, double dash alone.
          Thanks to Bryan Schofield for reporting this bug.
          Added tests.

2004-11-18 Gustaf.Neumann@wu-wien.ac.at
        * changed internal communication between end-of-filterchanin
          and "unknown" to flag instead of return code XOTCL_UNKNOWN
        * fixed [self callinglevel] in nested uplevel loops
          (many thanks to MichaelL@frogware.com for reporting the problem)

2004-11-14 Gustaf.Neumann@wu-wien.ac.at
        * fixed yet another free memory read 
          (many thanks for Zoran for help with purify)

2004-11-13 Gustaf.Neumann@wu-wien.ac.at
        * fixed entries for aolserver in configure.in 
          (many thanks for Zoran reporting this problem)
        * fixed --enable symbols (many thanks for Zoran reporting this problem)
        * fixed free memory read in namespace deletes
2004-10-30 Gustaf.Neumann@wu-wien.ac.at
        * added error message when someone tries to delete a
          non-existing proc/instproc
        * using less memory for objects and classes with procs/instprocs,
          when they do not use assertions (saving 14%)
        * prettified langref with css
        * documented deletions of object procs and instproc through
          proc/instproc with empty args and empty body

2004-10-13 Gustaf.Neumann@wu-wien.ac.at
        * make namespace handling code more orthogonal
        * using resolver for exists method (might be used in future for
          other methods as well)
        * cleanup of dead code

2004-10-09 Gustaf.Neumann@wu-wien.ac.at
        * fixed recreation bug in connection with namespace eval
        * fixed exists for objects with own namespaces

2004-09-20 Gustaf.Neumann@wu-wien.ac.at
        * Fixed bin-tar target to include sdbm+gdbm+expat
        * Improved documentation (tutorial and langref) for forwarding options
        * using $prefix in install-aol, provided a README.aol file