@@ -52,7 +52,7 @@
           <em> Date:</em>
         </TD>
         <TD VALIGN="top">
-          [::xotcl::rcs date {$Date: 2004/11/19 22:59:37 $}]
+          [::xotcl::rcs date {$Date: 2004/11/20 18:54:34 $}]
         </TD>
       </TR>
     </TABLE>
